fix clear button visibility

--- a/src/app/test/page.module.scss
+++ b/src/app/test/page.module.scss
@@ -168,7 +168,8 @@
 }
 
 .clearButton {
-    color: var(--lightText);
+    // color: var(--lightText);
+    color: var(--secondaryDark);
     position: relative;
     transform: translateX(-33px);
     background: none;
